@@ -1,34 +1,54 @@
 INSTRUCTIONS :
 
-/!\ version de java : java 17 /!\
-__
+/!\ version de java : minimum java 8 /!\
+___________
+
 Pour le jeu :
 
-
-Ourvir le cmd dans le répertoire où se trouve 'programmes.jar'. (./programmes/...)
-Copier la commande : java -jar --enable-preview --module-path "../librairies/javafx-sdk-17.0.2/lib" --add-modules javafx.controls,javafx.fxml .\programmes.jar
-Exécuter la commande dans le susdit cmd.
-Sélectionner avec le bouton 'choix json' le json. ( une grille de test est disponible : "test.JSON" dans "./programmes/...".)
-Sélectionner la difficulté de votre choix.
-Appuyer sur 'nouvelle partie'.
+-Ouvrez le dossier 'programmes'
+Sur windows :
+	-Double cliquez sur le fichier 'QuiEstCe.bat'
+Sur Linux :
+	-Ouvrez un terminal dans le dossier 'programmes'
+	-Executez la commande './QuiEstCe-Linux.bat'
+-Sélectionner avec le bouton 'choix json' le json. ( une grille de test est disponible : "test.JSON" dans "./programmes/...".)
+-Sélectionner la difficulté de votre choix.
+-Appuyer sur 'nouvelle partie'.
 
 //Pour reprendre une partie la dernière partie là ou vous l'avez laisser il vous suffit d'appuyer sur le bouton "charger partie".
 
 A vous de jouer !
 
-__
+___________
+
 Pour le générateur :
 
 
-Ourvir le cmd dans le répertoire où se trouve 'generateur.jar'. (./generateur/...)
-Copier la commande : java -jar --enable-preview --module-path "../librairies/javafx-sdk-17.0.2/lib" --add-modules javafx.controls,javafx.fxml .\generateur.jar
-Exécuter la commande dans le susdit cmd.
-Choisir un dossier contenant les images qui constiturons la future grille pour jouer au "Qui est-ce ?". (un dossier d'image est disponible : "personnage" dans "./generateur/images/personnages")
-Suivre les étapes. 
-Vous pouvez récuperer votre grille fonctionnelle (__.json) dans le dossier que vous avez choisi.
+-Ouvrez le dossier 'generateur'
+Sur windows :
+	-Double cliquez sur le fichier 'generateur.bat'
+Sur Linux :
+	-Ouvrez un terminal dans le dossier 'generateur'
+	-Executez la commande './generateur-linux.bat'
+-Choisir un dossier contenant les images qui constiturons la future grille pour jouer au "Qui est-ce ?". (un dossier d'image est disponible : "personnage" dans "./generateur/images/personnages")
+-Suivre les étapes. 
+-Vous pouvez récuperer votre grille fonctionnelle (__.json) dans le dossier que vous avez choisi.
 
+___________
 
+Pour l'extension du Qui est-ce :
 
-
-// Des changements ont été apportés au programmes principale du jeu depuis le dernier rendu pour régler des problemes. 
-// Il est conseillé d'utiliser la dernière version disponible.
+-Ouvrez le dossier 'programmes'
+Sur windows :
+	-Double cliquez sur le fichier 'QuiEstCe.bat'
+Sur Linux :
+	-Ouvrez un terminal dans le dossier 'programmes'.
+	-Executez la commande './QuiEstCe-Linux.bat'.
+Si vous êtes un serveur :
+	-Etre sur d'avoir son port 51735 ouvert sur son reseau public.
+	-Sélectionner avec le bouton 'choix json' le json. ( une grille de test est disponible : "test.JSON" dans "./programmes/...".).
+	-Cliquez sur 'Recherche d'adversaire'.
+Si vous êtes un client :
+	-Rensignez l'adresse IP du serveur.
+	-Cliquez sur 'Rechercher une partie'
+-Suivre les étapes.
